# k8055

./: CMakeLists.txt  README.txt  TODO  build.sh  reformat  velleman.rules
java/cmake/: UseJava.cmake
k8055gui/: CMakeLists.txt  MyApp.cpp  MyFrame.cpp  MyFrame.h
libk8055/: CMakeLists.txt  k8055++.h  k8055++.pc.in  k8055.h  k8055.pc.in  libk8055.c  libk8055.cpp  main.c  test
pyk8055/: CMakeLists.txt  k8055qt.py  libk8055.i  pyplotA.py  pyplotD.py  setup.py
ruby/ffi-k8055/: Changelog  README.rdoc  Rakefile
ruby/ffi-k8055/lib/: k8055.rb
ruby/ffi-k8055/spec/: k8055_spec.rb
ruby/ffi-k8055/tasks/: constants.rb
