
ADD_EXECUTABLE(k8055gui WIN32 MACOSX_BUNDLE MyApp.cpp MyFrame.cpp )

TARGET_LINK_LIBRARIES(k8055gui
    k8055-${VERSION}
    ${wxWidgets_LIBRARIES}
)

INCLUDE(${wxWidgets_USE_FILE})

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}
    #    ${wxWidgets_INCLUDE_DIRS}
)

ADD_DEPENDENCIES(k8055gui k8055-${VERSION})

INSTALL(TARGETS k8055gui RUNTIME DESTINATION bin BUNDLE DESTINATION bin )

