
ADD_LIBRARY( k8055 SHARED libk8055.c )
ADD_LIBRARY( k8055-static STATIC libk8055.c )
INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}
    ${LIBUSB_INCLUDE_DIR}
)
TARGET_LINK_LIBRARIES( k8055
    ${LIBUSB_LDFLAGS}
    m
)
SET_TARGET_PROPERTIES(k8055 PROPERTIES PUBLIC_HEADER k8055.h )
SET_TARGET_PROPERTIES(k8055 PROPERTIES VERSION ${VERSION} SOVERSION ${VERSION_MAJOR})

INSTALL(TARGETS k8055
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    PUBLIC_HEADER DESTINATION include
)

ADD_LIBRARY( k8055++ SHARED libk8055.cpp )
ADD_DEPENDENCIES(k8055++ k8055)
ADD_LIBRARY( k8055++-static STATIC libk8055.cpp )
ADD_DEPENDENCIES(k8055++-static k8055)
INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} )
TARGET_LINK_LIBRARIES( k8055++
    k8055
)
SET_TARGET_PROPERTIES(k8055++ PROPERTIES PUBLIC_HEADER k8055++.h )
SET_TARGET_PROPERTIES(k8055++ PROPERTIES VERSION ${VERSION} SOVERSION ${VERSION_MAJOR})

INSTALL(TARGETS k8055++
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    PUBLIC_HEADER DESTINATION include
)

ADD_EXECUTABLE(k8055cmd WIN32 MACOSX_BUNDLE main.c )
TARGET_LINK_LIBRARIES(k8055cmd
    k8055
)
ADD_DEPENDENCIES(k8055cmd k8055)

CONFIGURE_FILE(k8055.pc.in k8055.pc @ONLY)

INSTALL(TARGETS k8055cmd RUNTIME DESTINATION bin BUNDLE DESTINATION bin )

INSTALL(FILES k8055cmd.1.gz DESTINATION man/man1/ )

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/k8055.pc DESTINATION lib/pkgconfig )
